fix to candle scrollbar

--- a/src/modules/market/components/market-outcome-charts--candlestick/market-outcome-charts--candlestick.styles.less
+++ b/src/modules/market/components/market-outcome-charts--candlestick/market-outcome-charts--candlestick.styles.less
@@ -35,10 +35,6 @@
       background-color: red;
     }
 
-    #candlestick_chart {
-      overflow: auto;
-    }
-
     #hovered_candlestick_price_label {
       .caps--small();
 
@@ -121,10 +117,6 @@
         fill: @color-lightgray;
       }
     }
-
-    #candle_visible_area {
-      overflow-x: scroll;
-    }
   }
 }
 
@@ -137,5 +129,6 @@
 .MarketOutcomeCandlestick__chart-container {
   height: 100%;
   overflow-x: auto;
+  overflow-y: hidden;
   position: absolute;
 }
